Bug 1165200 - Fix GonkDisplay::QueueBuffer() for bootAnim. r=sotaro, a=2.2r+